@@ -3,6 +3,8 @@ Revision history for CGI-Info
 0.87
 	Test warnings()
 	Allow the logger to be a ref to code
+	Fix is_mobile() default return code
+	Added t/30-basics.t
 
 0.86	Mon Nov 25 09:17:30 EST 2024
 	Ensure correct message is logged on SQL injection attempt
